2017-04-27

        * Version 1.3.0 released
        =========================

        Scale optimizer convergence criterion with step size (#2022)
        Put response cube loading and saving in OpenMP critical zone (#2021)
        Add GPhases class (#1996)
        Add support for Monte Carlo identifier metadata (#1483)
        Add GEventList::has_mc_id() and GEventAtom::mc_id() methods (#1483)
        Add GEventList::has_phase() and GEventList::has_detxy() methods (#1982)
        Add GEventList::append_column() method (#1991)
        Add scalar addition and subtraction operators to matrix classes (#1990)
        Allow fitting of scale parameter in composite models (#1992)
        Add GCTAAeff::ebounds() method (#1989)
        Add GEbounds::emin() and GEbounds::emax() setter methods (#1989)
        Protect GEbounds::set_lin() and set_log() methods from invalid arguments (#1989)
        Avoid hang-up of GCTAModelAeffBackground::mc() method (#1988)
        Copy shared Python libraries instead of creating a symbolic link (#1987)
        Added FITS image conversion operators (#1986)
        If code originates from Git, always compile the Python bindings (#1985)
        Raise exception instead of exiting with return code in Python tests (#1983)
        Enhance precision of GCTAEdisp2D::compute_ebounds_src
        Add conversion methods between GEbounds and GEnergies (#1977)
        Add GModelSpectralSmoothBrokenPlaw class (#1948)
        Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
        Add GCTARoi::contains method
        Do no longer interpret a CTA calibration database as file path (#1969)
        Add GCTAResponseIrf::rspname() method
        GWcs now supports CD keywords instead of CDELT (#1951)
        Correct GCTAPsf2D containment radius computation (#1876)
        Add GFilename::type() method (#1863)
        Add GLS and SFL WCS projections (#1851)
        GModelSpectralNodes throws exception for non-positive energy or intensity (#990)

